@@ -2,6 +2,7 @@ Revision history for Perl module Dist-Zilla-PluginBundle-DOHERTY
 
 {{$NEXT}}
     * Handle the case where it is a fake release
+    * Use is.gd to shorten URL for Twitter
 
 0.008     2011-01-18
     * Fixed spurious warning
